--- a/src/main/resources/static/filesUpload.html
+++ b/src/main/resources/static/filesUpload.html
@@ -1,3 +1,12 @@
 <html>
-<form action="file"></form>
+<form action="/filesUpload.do" method="post" enctype="multipart/form-data">
+<p>
+选择文件:<input type="file" name="file">
+<p>
+选择文件:<input type="file" name="file">
+<p>
+选择文件:<input type="file" name="file	">
+<p>
+<input type="submit" value="提交">
+</form>
 </html>
