--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,4 +1,5 @@
 <html>
+<link rel="shortcut icon" href="/images/gc_logo.ico">
 <div>hello to index!!!</div>
 <div>功能：
 <a href="/fileUpload.html">单上传文件</a>
